initial support for dynamic task names

--- a/views/task_edit.haml
+++ b/views/task_edit.haml
@@ -232,10 +232,10 @@
               .table
 
               %form{:name => 'taskForm', :id => 'taskForm', :class => 'form-horizontal', :action => '/tasks/create', :method => 'post'}
-                .form-group
-                  %label.control-label.col-xs-2{:for => ''} Task Name
-                  .col-xs-10
-                    %input{:type => 'textbox', :class => 'form-control', :name => 'name', :id => 'name'}
+                -#.form-group
+                -#  %label.control-label.col-xs-2{:for => ''} Task Name
+                -#  .col-xs-10
+                -#    %input{:type => 'textbox', :class => 'form-control', :name => 'name', :id => 'name'}
                 .form-group
                   %label.control-label.col-xs-2{:for => ''} Attack Mode
                   .col-xs-4
