dynamic build of task name

--- a/views/task_list.haml
+++ b/views/task_list.haml
@@ -24,7 +24,7 @@
                 %thead
                   %tr
                     %th
-                      %b Task Name
+                      %b Name
                     %th
                       %b Type
                     %th
